# Consistent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
bip/: __init__.py  __main__.py  branch_structure.py  cli.py  diff_trees.py  extract_comments.py  join_comments.py  utils.py
faint/: __main__.py  branch_structure.py  cli.py  diff_trees.py  extract_comments.py  join_comments.py  utils.py
poc/: .gitignore  README.md  bip.py  branch_structure.py  diff_trees.py  extract_comments.py  join_comments.py  join_them.py  main.py  requirements.txt  utils.py
poc/bip/: cli.py  diff_trees.py  extract_comments.py  join_comments.py  utils.py
poc/codes/: a.py  b.py
poc/tests/: test_all.py  test_diff.py  test_extract.py  test_join.py  utils.py
poc/tests/cases/happy_path/: a.py  comments.json  for_diff.py  no_comments.py  with_comments.py
poc/tests/cases/unknown_problem_1/: comments.json  no_comments.py  with_comments.py
tests/: test_diff.py  test_extract.py  test_join.py  utils.py
tests/cases/happy_path/: comments.json  no_comments.py
tests/cases/unknown_problem_1/: comments.json  with_comments.py
