[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bip"
authors = [{ name = "Cvaniak", email = "igna.cwaniak@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"

[project.scripts]
bip = "bip.__main__:main" 

[tool.ruff]
extend-exclude = ["tests/cases"]
line-length = 120

[tool.ruff.lint]
exclude = ["tests/cases/*"]
select = ["E", "F", "I", "B", "A"]

[tool.ruff.format]
exclude = ["tests/cases/*"]

[tool.mypy]
